--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,19 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
+cairocffi==1.4.0
+CairoSVG==2.6.0
+cffi==1.15.1
 charset-normalizer==3.0.1
 chess==1.9.4
+cssselect2==0.7.0
+defusedxml==0.7.1
 discord.py==2.2.2
 frozenlist==1.3.3
 idna==3.4
 multidict==6.0.4
 Pillow==9.4.0
+pycparser==2.21
+tinycss2==1.2.1
+webencodings==0.5.1
 yarl==1.8.2
